<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-123dp">

        <ToggleButton
            android:id="@+id/getinbutton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/tooglebutton_selector"
            android:textColor="@color/white"
            android:textOff="@string/get_in_button_off"
            android:textOn="@string/get_in_button_on"
            tools:ignore="TextContrastCheck" />

        <ToggleButton
            android:id="@+id/getoutbutton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/tooglebutton_selector"
            android:textColor="@color/white"
            android:textOff="@string/get_out_button_off"
            android:textOn="@string/get_out_button_on"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/idBtnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>